--- a/hadui/web/front.html
+++ b/hadui/web/front.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>HadUI</title>
+    <title>hadui</title>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
 
