--- a/hadui/web/dev.html
+++ b/hadui/web/dev.html
@@ -40,8 +40,11 @@
 
 <body>
 
-    <h3>hadui <img width="16" height="16" type="image/png" src="/favicon.png" />
-        Web front UI for interactive stack projects</h3>
+    <h3><a target="_blank" href="https://github.com/complyue/hadui">hadui</a>
+        <img width="16" height="16" type="image/png" src="/favicon.png" />
+        Web front UI for interactive stack projects
+        <a style="font-size: 70%;" target="_blank" href="https://github.com/complyue/hadui/wiki">docs</a>
+    </h3>
 
     <div class="LogArea">
         <div class="LogBox"></div>
