capitalize H where hadui serves as a name

--- a/hadui/web/dev.html
+++ b/hadui/web/dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title>hadui</title>
+  <title>Hadui</title>
 
   <link rel="icon" type="image/png" href="/favicon.png" />
 
@@ -37,7 +37,7 @@
 
 <body>
   <h3>
-    <a target="_blank" href="https://github.com/complyue/hadui">hadui</a>
+    <a target="_blank" href="https://github.com/complyue/hadui">Hadui</a>
     <img width="16" height="16" type="image/png" src="/favicon.png" />
     Web front UI for interactive stack projects
     <a
