--- a/hadui/web/dev.html
+++ b/hadui/web/dev.html
@@ -39,7 +39,7 @@
   <h3>
     <a target="_blank" href="https://github.com/complyue/hadui">Hadui</a>
     <img width="16" height="16" type="image/png" src="/favicon.png" />
-    Web front UI for interactive stack projects
+    Web front UI for interactive Haskell projects
     <a
       style="font-size: 70%;"
       target="_blank"
